SyntaxTree/bison.output
Terminals unused in grammar

   VAR
   DIGIT
   LETER
   COMMENT
   DIVIDE
   BOOL_VAL


Grammar

    0 $accept: goal END

    1 goal: main_class END
    2     | main_class class_s END

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    4 class_s: class_s class
    5        | class

    6 class: CLASS id L_BRACKET R_BRACKET
    7      | CLASS id L_BRACKET var_s R_BRACKET
    8      | CLASS id L_BRACKET method_s R_BRACKET
    9      | CLASS id L_BRACKET var_s method_s R_BRACKET
   10      | CLASS id EXTENDS id L_BRACKET R_BRACKET
   11      | CLASS id EXTENDS id L_BRACKET var_s R_BRACKET
   12      | CLASS id EXTENDS id L_BRACKET method_s R_BRACKET
   13      | CLASS id EXTENDS id L_BRACKET var_s method_s R_BRACKET

   14 var_s: var_s var
   15      | var

   16 var: type id SEMICOLON

   17 method_s: method_s method
   18         | method

   19 method: modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET

   23 arg_s: %empty
   24      | arg_s COMMA type id
   25      | type id

   26 modifier: PUBLIC
   27         | PRIVATE

   28 type: INT L_SQUARE R_SQUARE
   29     | BOOLEAN
   30     | INT
   31     | id

   32 statement_s: statement_s statement
   33            | statement

   34 statement: L_BRACKET statement_s R_BRACKET
   35          | IF L_ROUND exp R_ROUND statement ELSE statement
   36          | WHILE L_ROUND exp R_ROUND statement
   37          | SYSTEMOUTPRINTLN L_ROUND exp R_ROUND SEMICOLON
   38          | id EQUALS exp SEMICOLON
   39          | id L_SQUARE exp R_SQUARE EQUALS exp SEMICOLON

   40 exp_s: exp_s COMMA exp
   41      | exp

   42 exp: exp AND exp
   43    | exp LESS exp
   44    | exp PLUS exp
   45    | exp MINUS exp
   46    | exp STAR exp
   47    | exp PERCENT exp
   48    | exp OR exp
   49    | exp L_SQUARE exp R_SQUARE
   50    | exp DOT LENGTH
   51    | exp DOT id L_ROUND R_ROUND
   52    | exp DOT id L_ROUND exp_s R_ROUND
   53    | INTEGER
   54    | TRUE
   55    | FALSE
   56    | id
   57    | THIS
   58    | NEW INT L_SQUARE exp R_SQUARE
   59    | NEW id L_ROUND R_ROUND
   60    | BANG exp
   61    | L_ROUND exp R_ROUND

   62 id: ID


Terminals, with rules where they appear

END (0) 0 1 2
error (256)
CLASS (258) 3 6 7 8 9 10 11 12 13
VAR (259)
EXTENDS (260) 10 11 12 13
PUBLIC (261) 3 26
PRIVATE (262) 27
STATICVOIDMAIN (263) 3
STRING (264) 3
INT (265) 28 30 58
BOOLEAN (266) 29
IF (267) 35
ELSE (268) 35
WHILE (269) 36
SYSTEMOUTPRINTLN (270) 37
LENGTH (271) 50
TRUE (272) 54
FALSE (273) 55
NEW (274) 58 59
THIS (275) 57
RETURN (276) 19 20 21 22
DIGIT (277)
LETER (278)
COMMENT (279)
L_BRACKET (280) 3 6 7 8 9 10 11 12 13 19 20 21 22 34
R_BRACKET (281) 3 6 7 8 9 10 11 12 13 19 20 21 22 34
L_ROUND (282) 3 19 20 21 22 35 36 37 51 52 59 61
R_ROUND (283) 3 19 20 21 22 35 36 37 51 52 59 61
L_SQUARE (284) 3 28 39 49 58
R_SQUARE (285) 3 28 39 49 58
SEMICOLON (286) 16 19 20 21 22 37 38 39
MINUS (287) 45
PLUS (288) 44
PERCENT (289) 47
DIVIDE (290)
EQUALS (291) 38 39
COMMA (292) 24 40
DOT (293) 50 51 52
STAR (294) 46
LESS (295) 43
BANG (296) 60
AND (297) 42
OR (298) 48
INTEGER (299) 53
BOOL_VAL (300)
ID (301) 62


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
goal (48)
    on left: 1 2, on right: 0
main_class (49)
    on left: 3, on right: 1 2
class_s (50)
    on left: 4 5, on right: 2 4
class (51)
    on left: 6 7 8 9 10 11 12 13, on right: 4 5
var_s (52)
    on left: 14 15, on right: 7 9 11 13 14 19 20
var (53)
    on left: 16, on right: 14 15
method_s (54)
    on left: 17 18, on right: 8 9 12 13 17
method (55)
    on left: 19 20 21 22, on right: 17 18
arg_s (56)
    on left: 23 24 25, on right: 19 20 21 22 24
modifier (57)
    on left: 26 27, on right: 19 20 21 22
type (58)
    on left: 28 29 30 31, on right: 16 19 20 21 22 24 25
statement_s (59)
    on left: 32 33, on right: 3 19 21 32 34
statement (60)
    on left: 34 35 36 37 38 39, on right: 32 33 35 36
exp_s (61)
    on left: 40 41, on right: 40 52
exp (62)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61, on right: 19 20 21 22 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52 58 60 61
id (63)
    on left: 62, on right: 3 6 7 8 9 10 11 12 13 16 19 20 21 22 24
    25 31 38 39 51 52 56 59


State 0

    0 $accept: . goal END

    CLASS  shift, and go to state 1

    goal        go to state 2
    main_class  go to state 3


State 1

    3 main_class: CLASS . id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    ID  shift, and go to state 4

    id  go to state 5


State 2

    0 $accept: goal . END

    END  shift, and go to state 6


State 3

    1 goal: main_class . END
    2     | main_class . class_s END

    END    shift, and go to state 7
    CLASS  shift, and go to state 8

    class_s  go to state 9
    class    go to state 10


State 4

   62 id: ID .

    $default  reduce using rule 62 (id)


State 5

    3 main_class: CLASS id . L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    L_BRACKET  shift, and go to state 11


State 6

    0 $accept: goal END .

    $default  accept


State 7

    1 goal: main_class END .

    $default  reduce using rule 1 (goal)


State 8

    6 class: CLASS . id L_BRACKET R_BRACKET
    7      | CLASS . id L_BRACKET var_s R_BRACKET
    8      | CLASS . id L_BRACKET method_s R_BRACKET
    9      | CLASS . id L_BRACKET var_s method_s R_BRACKET
   10      | CLASS . id EXTENDS id L_BRACKET R_BRACKET
   11      | CLASS . id EXTENDS id L_BRACKET var_s R_BRACKET
   12      | CLASS . id EXTENDS id L_BRACKET method_s R_BRACKET
   13      | CLASS . id EXTENDS id L_BRACKET var_s method_s R_BRACKET

    ID  shift, and go to state 4

    id  go to state 12


State 9

    2 goal: main_class class_s . END
    4 class_s: class_s . class

    END    shift, and go to state 13
    CLASS  shift, and go to state 8

    class  go to state 14


State 10

    5 class_s: class .

    $default  reduce using rule 5 (class_s)


State 11

    3 main_class: CLASS id L_BRACKET . PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    PUBLIC  shift, and go to state 15


State 12

    6 class: CLASS id . L_BRACKET R_BRACKET
    7      | CLASS id . L_BRACKET var_s R_BRACKET
    8      | CLASS id . L_BRACKET method_s R_BRACKET
    9      | CLASS id . L_BRACKET var_s method_s R_BRACKET
   10      | CLASS id . EXTENDS id L_BRACKET R_BRACKET
   11      | CLASS id . EXTENDS id L_BRACKET var_s R_BRACKET
   12      | CLASS id . EXTENDS id L_BRACKET method_s R_BRACKET
   13      | CLASS id . EXTENDS id L_BRACKET var_s method_s R_BRACKET

    EXTENDS    shift, and go to state 16
    L_BRACKET  shift, and go to state 17


State 13

    2 goal: main_class class_s END .

    $default  reduce using rule 2 (goal)


State 14

    4 class_s: class_s class .

    $default  reduce using rule 4 (class_s)


State 15

    3 main_class: CLASS id L_BRACKET PUBLIC . STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    STATICVOIDMAIN  shift, and go to state 18


State 16

   10 class: CLASS id EXTENDS . id L_BRACKET R_BRACKET
   11      | CLASS id EXTENDS . id L_BRACKET var_s R_BRACKET
   12      | CLASS id EXTENDS . id L_BRACKET method_s R_BRACKET
   13      | CLASS id EXTENDS . id L_BRACKET var_s method_s R_BRACKET

    ID  shift, and go to state 4

    id  go to state 19


State 17

    6 class: CLASS id L_BRACKET . R_BRACKET
    7      | CLASS id L_BRACKET . var_s R_BRACKET
    8      | CLASS id L_BRACKET . method_s R_BRACKET
    9      | CLASS id L_BRACKET . var_s method_s R_BRACKET

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    INT        shift, and go to state 22
    BOOLEAN    shift, and go to state 23
    R_BRACKET  shift, and go to state 24
    ID         shift, and go to state 4

    var_s     go to state 25
    var       go to state 26
    method_s  go to state 27
    method    go to state 28
    modifier  go to state 29
    type      go to state 30
    id        go to state 31


State 18

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN . L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    L_ROUND  shift, and go to state 32


State 19

   10 class: CLASS id EXTENDS id . L_BRACKET R_BRACKET
   11      | CLASS id EXTENDS id . L_BRACKET var_s R_BRACKET
   12      | CLASS id EXTENDS id . L_BRACKET method_s R_BRACKET
   13      | CLASS id EXTENDS id . L_BRACKET var_s method_s R_BRACKET

    L_BRACKET  shift, and go to state 33


State 20

   26 modifier: PUBLIC .

    $default  reduce using rule 26 (modifier)


State 21

   27 modifier: PRIVATE .

    $default  reduce using rule 27 (modifier)


State 22

   28 type: INT . L_SQUARE R_SQUARE
   30     | INT .

    L_SQUARE  shift, and go to state 34

    $default  reduce using rule 30 (type)


State 23

   29 type: BOOLEAN .

    $default  reduce using rule 29 (type)


State 24

    6 class: CLASS id L_BRACKET R_BRACKET .

    $default  reduce using rule 6 (class)


State 25

    7 class: CLASS id L_BRACKET var_s . R_BRACKET
    9      | CLASS id L_BRACKET var_s . method_s R_BRACKET
   14 var_s: var_s . var

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    INT        shift, and go to state 22
    BOOLEAN    shift, and go to state 23
    R_BRACKET  shift, and go to state 35
    ID         shift, and go to state 4

    var       go to state 36
    method_s  go to state 37
    method    go to state 28
    modifier  go to state 29
    type      go to state 30
    id        go to state 31


State 26

   15 var_s: var .

    $default  reduce using rule 15 (var_s)


State 27

    8 class: CLASS id L_BRACKET method_s . R_BRACKET
   17 method_s: method_s . method

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    R_BRACKET  shift, and go to state 38

    method    go to state 39
    modifier  go to state 29


State 28

   18 method_s: method .

    $default  reduce using rule 18 (method_s)


State 29

   19 method: modifier . type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier . type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier . type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier . type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET

    INT      shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    ID       shift, and go to state 4

    type  go to state 40
    id    go to state 31


State 30

   16 var: type . id SEMICOLON

    ID  shift, and go to state 4

    id  go to state 41


State 31

   31 type: id .

    $default  reduce using rule 31 (type)


State 32

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND . STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    STRING  shift, and go to state 42


State 33

   10 class: CLASS id EXTENDS id L_BRACKET . R_BRACKET
   11      | CLASS id EXTENDS id L_BRACKET . var_s R_BRACKET
   12      | CLASS id EXTENDS id L_BRACKET . method_s R_BRACKET
   13      | CLASS id EXTENDS id L_BRACKET . var_s method_s R_BRACKET

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    INT        shift, and go to state 22
    BOOLEAN    shift, and go to state 23
    R_BRACKET  shift, and go to state 43
    ID         shift, and go to state 4

    var_s     go to state 44
    var       go to state 26
    method_s  go to state 45
    method    go to state 28
    modifier  go to state 29
    type      go to state 30
    id        go to state 31


State 34

   28 type: INT L_SQUARE . R_SQUARE

    R_SQUARE  shift, and go to state 46


State 35

    7 class: CLASS id L_BRACKET var_s R_BRACKET .

    $default  reduce using rule 7 (class)


State 36

   14 var_s: var_s var .

    $default  reduce using rule 14 (var_s)


State 37

    9 class: CLASS id L_BRACKET var_s method_s . R_BRACKET
   17 method_s: method_s . method

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    R_BRACKET  shift, and go to state 47

    method    go to state 39
    modifier  go to state 29


State 38

    8 class: CLASS id L_BRACKET method_s R_BRACKET .

    $default  reduce using rule 8 (class)


State 39

   17 method_s: method_s method .

    $default  reduce using rule 17 (method_s)


State 40

   19 method: modifier type . id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier type . id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier type . id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier type . id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET

    ID  shift, and go to state 4

    id  go to state 48


State 41

   16 var: type id . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 42

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING . L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    L_SQUARE  shift, and go to state 50


State 43

   10 class: CLASS id EXTENDS id L_BRACKET R_BRACKET .

    $default  reduce using rule 10 (class)


State 44

   11 class: CLASS id EXTENDS id L_BRACKET var_s . R_BRACKET
   13      | CLASS id EXTENDS id L_BRACKET var_s . method_s R_BRACKET
   14 var_s: var_s . var

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    INT        shift, and go to state 22
    BOOLEAN    shift, and go to state 23
    R_BRACKET  shift, and go to state 51
    ID         shift, and go to state 4

    var       go to state 36
    method_s  go to state 52
    method    go to state 28
    modifier  go to state 29
    type      go to state 30
    id        go to state 31


State 45

   12 class: CLASS id EXTENDS id L_BRACKET method_s . R_BRACKET
   17 method_s: method_s . method

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    R_BRACKET  shift, and go to state 53

    method    go to state 39
    modifier  go to state 29


State 46

   28 type: INT L_SQUARE R_SQUARE .

    $default  reduce using rule 28 (type)


State 47

    9 class: CLASS id L_BRACKET var_s method_s R_BRACKET .

    $default  reduce using rule 9 (class)


State 48

   19 method: modifier type id . L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier type id . L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier type id . L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier type id . L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET

    L_ROUND  shift, and go to state 54


State 49

   16 var: type id SEMICOLON .

    $default  reduce using rule 16 (var)


State 50

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE . R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    R_SQUARE  shift, and go to state 55


State 51

   11 class: CLASS id EXTENDS id L_BRACKET var_s R_BRACKET .

    $default  reduce using rule 11 (class)


State 52

   13 class: CLASS id EXTENDS id L_BRACKET var_s method_s . R_BRACKET
   17 method_s: method_s . method

    PUBLIC     shift, and go to state 20
    PRIVATE    shift, and go to state 21
    R_BRACKET  shift, and go to state 56

    method    go to state 39
    modifier  go to state 29


State 53

   12 class: CLASS id EXTENDS id L_BRACKET method_s R_BRACKET .

    $default  reduce using rule 12 (class)


State 54

   19 method: modifier type id L_ROUND . arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier type id L_ROUND . arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier type id L_ROUND . arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier type id L_ROUND . arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET

    INT      shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    ID       shift, and go to state 4

    $default  reduce using rule 23 (arg_s)

    arg_s  go to state 57
    type   go to state 58
    id     go to state 31


State 55

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE . id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    ID  shift, and go to state 4

    id  go to state 59


State 56

   13 class: CLASS id EXTENDS id L_BRACKET var_s method_s R_BRACKET .

    $default  reduce using rule 13 (class)


State 57

   19 method: modifier type id L_ROUND arg_s . R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier type id L_ROUND arg_s . R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier type id L_ROUND arg_s . R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier type id L_ROUND arg_s . R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
   24 arg_s: arg_s . COMMA type id

    R_ROUND  shift, and go to state 60
    COMMA    shift, and go to state 61


State 58

   25 arg_s: type . id

    ID  shift, and go to state 4

    id  go to state 62


State 59

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id . R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    R_ROUND  shift, and go to state 63


State 60

   19 method: modifier type id L_ROUND arg_s R_ROUND . L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier type id L_ROUND arg_s R_ROUND . L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier type id L_ROUND arg_s R_ROUND . L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier type id L_ROUND arg_s R_ROUND . L_BRACKET RETURN exp SEMICOLON R_BRACKET

    L_BRACKET  shift, and go to state 64


State 61

   24 arg_s: arg_s COMMA . type id

    INT      shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    ID       shift, and go to state 4

    type  go to state 65
    id    go to state 31


State 62

   25 arg_s: type id .

    $default  reduce using rule 25 (arg_s)


State 63

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND . L_BRACKET statement_s R_BRACKET R_BRACKET

    L_BRACKET  shift, and go to state 66


State 64

   19 method: modifier type id L_ROUND arg_s R_ROUND L_BRACKET . var_s statement_s RETURN exp SEMICOLON R_BRACKET
   20       | modifier type id L_ROUND arg_s R_ROUND L_BRACKET . var_s RETURN exp SEMICOLON R_BRACKET
   21       | modifier type id L_ROUND arg_s R_ROUND L_BRACKET . statement_s RETURN exp SEMICOLON R_BRACKET
   22       | modifier type id L_ROUND arg_s R_ROUND L_BRACKET . RETURN exp SEMICOLON R_BRACKET

    INT               shift, and go to state 22
    BOOLEAN           shift, and go to state 23
    IF                shift, and go to state 67
    WHILE             shift, and go to state 68
    SYSTEMOUTPRINTLN  shift, and go to state 69
    RETURN            shift, and go to state 70
    L_BRACKET         shift, and go to state 71
    ID                shift, and go to state 4

    var_s        go to state 72
    var          go to state 26
    type         go to state 30
    statement_s  go to state 73
    statement    go to state 74
    id           go to state 75


State 65

   24 arg_s: arg_s COMMA type . id

    ID  shift, and go to state 4

    id  go to state 76


State 66

    3 main_class: CLASS id L_BRACKET PUBLIC STATICVOIDMAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET . statement_s R_BRACKET R_BRACKET

    IF                shift, and go to state 67
    WHILE             shift, and go to state 68
    SYSTEMOUTPRINTLN  shift, and go to state 69
    L_BRACKET         shift, and go to state 71
    ID                shift, and go to state 4
